fixed spacing

--- a/engage/engage_style.css
+++ b/engage/engage_style.css
@@ -22,6 +22,10 @@ html, body {
     display: flex;
 }
 
+.column-header {
+    margin-block-end: 0em;
+}
+
 .create-an-account {
     margin: 1em;
     min-width: 65%;
